# aras

./: .gitignore  House_A_converter.py  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  shap_testing.py  testing.py  testing_shap.py  to-do.md  visualization.py
Model_Results/CATBOOST/: catboost.csv
Model_Results/DECISION_TREE/: DECISION_TREE.csv
Model_Results/GAUSSIANNB/: gaussiannb.csv
Model_Results/KNN/: Euclidean.csv  Manhattan.csv
Model_Results/LIGHTGBM/: lightgbm.csv
Model_Results/LOGISTIC_REGRESSION/: logistic_regression.csv
Model_Results/POLY_SVM/: poly_svm.csv
Model_Results/RANDOM_FOREST/: RANDOM_FOREST.csv
Model_Results/SVM/: svm.csv
Model_Results/XGBOOST/: xgboost.csv
Model_Reults/KNN/: Activity_Counts.md  Euclidean.csv  Manhattan.csv
src/: args.py  config.py  feature_engineering.py  main.py  testing.py
src/Data/: data_loader.py  data_preprocessor.py  data_resampler.py
src/Data/House_A/: README
src/Data/House_B/: README
src/Visualization/: shap_main.py
src/models/: __init__.py  base_model.py  bayes_models.py  decision_tree.py  ensemble_models.py  linear_models.py  neighbors_models.py  recurrent_neural_network.py  tree_models.py
src/utils/: logging_utils.py  progress_bar_helper.py  results_saver.py
