[project]
name = "Aras"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksander Adamkowski",email = "aleks.adamkowski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=1.24.0,<2.2.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "scikit-learn (>=1.4.0,<2.0.0)",
    "numba (>=0.61.0)",
    "llvmlite (>=0.39.0)",
    "shap (>=0.41.0)",
    "xgboost (>=2.1.4,<3.0.0)",
    "ipython (>=8.32.0,<9.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "catboost (>=1.2.7,<2.0.0)",
    "imblearn (>=0.0,<0.1)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
